<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView 
	    android:id="@+id/txt_name"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/none"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
	
	<TextView 
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
	
	<TextView
	    android:id="@+id/txt_description"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="top"
        android:singleLine="false" 
        android:lines="4"
        android:text="@string/no_description"/>
	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:orientation="horizontal" >
	    
	    <TextView
	        android:id="@+id/txt6"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:text="@string/price"/>
	    
	    <TextView
	        android:id="@+id/txt_price"
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:layout_toRightOf="@+id/txt6"
        	android:text="@string/ch0"/>
	    
	</RelativeLayout>
    
</LinearLayout>